# company-policy-chatbot

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  openapi.json  policy.md  pyproject.toml
.github/workflows/: ci.yml
.superpowers/sdd/: progress.md
app/: api.py  checkpointer.py  config.py  deps.py  embeddings.py  ingestion.py  llm.py  observability.py  prompts.py  pydantic_ai_agent.py  pydantic_ai_llm.py  pydantic_ai_sessions.py  pydantic_ai_streaming.py  rag_graph.py  streaming.py  vectorstore.py
docs/superpowers/plans/: 2026-07-03-eval-gepa.md
docs/superpowers/specs/: 2026-06-06-pydantic-ai-side-by-side-design.md  2026-07-03-eval-gepa-design.md
eval/: config.py  export_prompts.py  generate_dataset.py  metrics.py  optimize.py  rag_program.py
tests/: conftest.py  test_api.py  test_api_pydantic_ai.py  test_ingestion.py  test_pydantic_ai_agent.py  test_pydantic_ai_sessions.py  test_rag_graph.py
tests/eval/: test_config.py  test_export_prompts.py  test_generate_dataset.py  test_metrics.py  test_rag_program.py
