[project]
name = "company-policy-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ag-ui-langgraph>=0.0.36",
    "copilotkit>=0.1.93",
    "dspy>=3.0",
    "ag-ui-protocol>=0.1.18",
    "fastapi[standard]>=0.136.3",
    "langchain>=1.3.1",
    "langchain-core>=1.4.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.1",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langsmith>=0.8.5",
    "openinference-instrumentation-langchain>=0.1.66",
    "opentelemetry-api>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-sdk>=1.27",
    "pgvector>=0.3.6",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "pydantic-ai>=1.0,<2",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.29",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pre-commit>=4.6.0",
    "pyrefly>=1.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.14",
]

[tool.ruff.lint]
select = ["E", "F", "ANN"]
ignore = [
    "ANN401",  # Any is acceptable for external library interfaces
    "E501",    # line length — handled by ruff format, not enforced here
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
